syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.protocol.protocols.relationship.v_1_0;

message InitParam {
    string name = 1;
    string value = 2;
}

message Initialized {
    option (scalapb.message).extends = "RelationshipEvent";
    repeated InitParam params = 1;
}

message CreatingPairwiseKey {
    option (scalapb.message).extends = "RelationshipEvent";
    string label = 1;
    string profileUrl = 2;
}

message PairwiseKeyCreated {
    option (scalapb.message).extends = "RelationshipEvent";
    string label = 1;
    string did = 2;
    string verKey = 3;
    string profileUrl = 4;
}

message InvitationCreated {
    option (scalapb.message).extends = "RelationshipEvent";
    string label = 1;
    string serviceEndpoint = 2;
    repeated string recipientKeys = 3;
    repeated string routingKeys = 4;
    string profileUrl = 5;
}
